Fixed scrollbar in register page, fixed register and sponsor button alignment.

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -34,49 +34,54 @@ img {
   height: auto;
 }
 button {
-    align-items: center;
-    width: 40%;
-    background-color: #000000;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 20px 0px;
-    cursor: pointer;
-    box-shadow: 0px 1px 5px rgb(0, 88, 1);
-    -moz-transition: all .2s ease-in;
-    -o-transition: all .2s ease-in;
-    -webkit-transition: all .2s ease-in;
-    transition: all .2s ease-in;
-  }
+  align-items: center;
+  width: 40%;
+  background-color: #000000;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 20px 0px;
+  cursor: pointer;
+  box-shadow: 0px 1px 5px rgb(0, 88, 1);
+  -moz-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+}
 
-  button:hover{
-    background-color: #D48359;
-  }
+button:hover{
+  background-color: #D48359;
+}
 
-  /* Countdown Timer */
-  /deep/ .countdown {
-    max-width: 100%;
-    width: 100%;
-    height: 10%;
-  }
-  /deep/ .countdown .two-dots {
-    display: none;
-  }
-  /deep/ .countdown .measurements {
-    color: white;
-    margin-right: 0px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    font-size: 1.2vw;
-  }
-  /deep/ .countdown .measurements .measurements-number{
-    padding-right: 10px;
-  }
-  /deep/ .countdown .divider {
-    font-size: 10px;
-  }
+/* Countdown Timer */
+/deep/ .countdown {
+  max-width: 100%;
+  width: 100%;
+  height: 10%;
+}
+/deep/ .countdown .two-dots {
+  display: none;
+}
+/deep/ .countdown .measurements {
+  color: white;
+  margin-right: 0px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 1.2vw;
+}
+/deep/ .countdown .measurements .measurements-number{
+  padding-right: 10px;
+}
+/deep/ .countdown .divider {
+  font-size: 10px;
+}
+
+/* make the buttons centered in the div */
+.row {
+  text-align: center;
+}
