--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -4,6 +4,7 @@
 }
 
 #typeframe {
+    overflow-x: hidden;
     text-align: center;
     display: block;
     min-height: 500px;
